# bpistats

./: CMakeLists.txt  README.md
include/: stat_aggregator.hpp  stat_printer.hpp  stat_selector.hpp
src/: bpistats.cpp
test/: sample-input-even.json  sample-input-odd.json  stat_aggregator_test.cpp  stat_selector_test.cpp
